MAE-369: Fix expand/collapse icons overlap

--- a/scss/civicrm/mixins/_expandable-table.scss
+++ b/scss/civicrm/mixins/_expandable-table.scss
@@ -127,6 +127,10 @@
       background: none;
       position: relative;
 
+      &::before {
+        opacity: 0;
+      }
+
       &::after {
         @include fa-icon($font-size-base, $fa-var-chevron-right);
         left: 0;
